--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,35 +16,102 @@
   </head>
 
   <body>
-    <div class="wrapper-masthead">
-      <div class="container">
-        <header class="masthead clearfix">
-          <a href="{{ site.baseurl }}/" class="site-avatar"><img src="{{ site.avatar }}" /></a>
-
-          <div class="site-info">
-            <h1 class="site-name"><a href="{{ site.baseurl }}/">{{ site.name }}</a></h1>
-            <p class="site-description">{{ site.description }}</p>
-          </div>
-
-          <nav>
-            <a href="{{ site.baseurl }}/">Blog</a>
-            <a href="{{ site.baseurl }}/about">About</a>
-          </nav>
-        </header>
+    <div id="wrapper">
+    <header>
+      <a href="{{ site.baseurl }}/"><img src="images/logo.png" width="400" class="logo" /></a>
+      <div class="blurb">
+        <p>Pourquoi écrire et publier sur le web ce que l’on pense d’un film ou d’une série ? Quel site choisir pour ce faire ? Comment s’y prennent les critiques amateurs ? Quels blogs, quels forums, quelles pages sont-ils les plus visités en France ? Y a-t-il une façon propre au web d’écrire des critiques ? Quelles différences séparent ces textes de ceux des professionnels de la presse écrite ? Autant de questions dans l’attente d’une étude académique systématique de leurs réponses possibles. Venez découvrir sur cette page les enjeux du projets Cinéphilies / Sériphilies.</p>
+        <div id="decouverte">
+          <a href="#">Découvrir le projet</a>
+        </div>
       </div>
+    </header>
+    <nav id="themes">
+      <ul>
+        <li><a href="#" id="actus-link">Actus</a></li>
+        <li><a href="#" id="evts-link">Événements</a></li>
+        <li><a href="#" id="media-link">Médias</a></li>
+        <li><a href="#" id="ecrit-link">Écrits</a></li>
+      </ul>
+    </nav>
+    <div class="clearfloat"></div>
+    <nav id="social">
+      <a href=""><img src="images/twitter.png" class="icon-social" /></a>
+      <a href=""><img src="images/facebook.png" class="icon-social" /></a>
+    </nav>
+    <div class="clearfloat"></div>
+    <div id="content">
+      <section class="actus-box module1">
+        <div class="titre-categorie">
+          <h4>Actus</h4>
+        </div>
+        <div class="content-wrap">
+          <h1><a href="#">Nouvelle bibliothèque</a></h1>
+          <aside class="author">
+            <h4>publié par <strong>Laurent Jullier</strong> le <strong>13/07/15</strong></h4>
+          </aside>
+        </div>
+        <!--fin content wrap-->
+      </section>
+      <section class="evts-box module2" style="background-image: url(images/conf.jpg);">
+        <div class="titre-categorie">
+          <h4>Événements</h4>
+        </div>
+        <div class="content-wrap">
+          <h1 style="background-color: #fff; font-size: 1.5em;"><a href="#">Colloque Nouvelles Cinéphilies à la Sorbonne</a></h1>
+          <aside class="author">
+            <h4 style="background-color: #fff;">publié par <strong>Laurent Jullier</strong> le <strong>13/07/15</strong></h4>
+          </aside>
+        </div>
+        <!--fin content wrap-->
+      </section>
+      <section class="actus-box module1">
+        <div class="titre-categorie">
+          <h4>Actus</h4>
+        </div>
+        <div class="content-wrap">
+          <h1><a href="#">Une critique mal perçue</a></h1>
+          <aside class="author">
+            <h4>publié par <strong>Mélanie Boissonneau</strong> le <strong>11/07/15</strong></h4>
+          </aside>
+        </div>
+        <!--fin content wrap-->
+      </section>
+      <section class="ecrits-box module1">
+        <div class="titre-categorie">
+          <h4>Écrits</h4>
+        </div>
+        <div class="content-wrap">
+          <h1><a href="#">« Trajectoires de la relocalisation »</a></h1>
+          <aside class="author">
+            <h4>écrit par<strong>Francesco Casetti</strong></h4>
+            <h4><em>Théorème</em> no. 15 - 2012</h4>
+          </aside>
+        </div>
+        <!--fin content wrap-->
+      </section>
+      <section class="media-box module2">
+        <div class="titre-categorie">
+          <h4>Médias</h4>
+        </div>
+        <div class="content-wrap">
+          <h1><a href="#">Le blog du critiqueur</a></h1>
+          <aside class="author">
+            <h4>en ligne depuis 2011 - actif</h4>
+          </aside>
+        </div>
+        <!--fin content wrap-->
+      </section>
     </div>
-
-    <div id="main" role="main" class="container">
-      {{ content }}
-    </div>
-
-    <div class="wrapper-footer">
-      <div class="container">
-        <footer class="footer">
-          {% include svg-icons.html %}
+    <!--close content-->
+      <footer class="footer">
+      <h6>Copyright Labex © 2015</h6>
+          
         </footer>
-      </div>
     </div>
+
+        
+
 
     {% include analytics.html %}
   </body>
