--- a/style.scss
+++ b/style.scss
@@ -929,11 +929,11 @@ Inlined to avoid required HTTP connection: h5bp.com/r */
     background-color: rgb(255, 221, 217);
   }
   
-  #themes {
+  .themes {
     width: 100%
   }
   
-  #themes ul {
+  .themes ul {
     width: 100%;
     height: 54px;
     display: block;
@@ -942,15 +942,14 @@ Inlined to avoid required HTTP connection: h5bp.com/r */
     margin-bottom: 5px !important;
   }
   
-  #themes ul li {
+  .themes ul li {
     list-style-type: none;
     float: left;
     display: block;
     width: 25%;
   }
   
-  #themes ul li a {
-    background-color: #E4E4E4;
+  .themes a {
     text-transform: uppercase;
     line-height: 3em;
     text-align: center;
@@ -962,26 +961,26 @@ Inlined to avoid required HTTP connection: h5bp.com/r */
     display: block;
   }
   
-  #themes ul li a:hover {
+  .themes a:hover {
     opacity: 0.8;
   }
   
-  #themes ul #actus-link,
+  .actus-link,
   .actus-box .titre-categorie {
     background-color: rgb(120, 216, 156);
   }
   
-  #themes ul #evts-link,
-  .evts-box .titre-categorie {
+  .evenement-link,
+  .evenement-box .titre-categorie {
     background-color: rgb(253, 203, 50);
   }
   
-  #themes ul #media-link,
-  .media-box .titre-categorie {
+  .medias-link,
+  .medias-box .titre-categorie {
     background-color: rgb(242, 46, 71);
   }
   
-  #themes ul #ecrit-link,
+  .ecrits-link,
   .ecrits-box .titre-categorie {
     background-color: rgb(255, 109, 99);
   }
@@ -1013,23 +1012,21 @@ Inlined to avoid required HTTP connection: h5bp.com/r */
     justify-content: center;
     margin-top: 0;
   }
-  
-  #content section h1 {
+
+  .actus-box {
     text-align: center;
   }
-  
-  #content section .titre-categorie h4 {
+
+  .actus-box .titre-categorie h4 {
     display: block;
     height: 26px;
-    text-align: center;
   }
   
-  #content section .author {
+  .actus-box .author {
     font-size: 0.8em;
-    text-align: center;
   }
   
-  #content .h4 {
+  .actus-box .h4 {
     margin-bottom: 0px;
   }
   
