gestion des largeurs de pages

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,6 +12,8 @@
 
   <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/style.css" />
   <link rel="alternate" type="application/rss+xml" title="{{ site.name }} - {{ site.description }}" href="{{ site.baseurl }}/feed.xml" />
+  <link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,800,700,600' rel='stylesheet' type='text/css'>
+  <link href='http://fonts.googleapis.com/css?family=Asap:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
 
   <!-- Created with Jekyll Now - http://github.com/barryclark/jekyll-now -->
 </head>
@@ -23,7 +25,7 @@
       <div class="blurb">
         <p>Pourquoi écrire et publier sur le web ce que l’on pense d’un film ou d’une série ? Quel site choisir pour ce faire ? Comment s’y prennent les critiques amateurs ? Quels blogs, quels forums, quelles pages sont-ils les plus visités en France ? Y a-t-il une façon propre au web d’écrire des critiques ? Quelles différences séparent ces textes de ceux des professionnels de la presse écrite ? Autant de questions dans l’attente d’une étude académique systématique de leurs réponses possibles. Venez découvrir sur cette page les enjeux du projets Cinéphilies / Sériphilies.</p>
         <div id="decouverte">
-          <a href="#">Découvrir le projet</a>
+          <a href="/pages/projet.html">Découvrir le projet</a>
         </div>
       </div>
     </header>
