--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 
-<article class="post">
+<article class="post article-wrap">
   <h1>{{ page.title }}</h1>
 
   <div class="entry">
