essai de commit le 25 aout pour ajout pages manquantes

--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -5,6 +5,11 @@
 
 // Colors
 $blue: #4183C4;
+$mintblue: #B5FFE1;
+$vertdeau: #78D89C;
+$rosecorail: #FF6D63;
+$rougestrong: #F22E47;
+$jaunedor: #FDCB32;
 
 // Grays
 $black: #000;
@@ -13,6 +18,7 @@ $darkGray: #333;
 $gray: #666;
 $lightGray: #eee;
 $white: #fff;
+
 
 // Font stacks
 $helvetica: Helvetica, Arial, sans-serif;
