2e essai commit 27 aout, pages actus et pages evenements retouchees

--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -21,6 +21,7 @@ $white: #fff;
 
 
 // Font stacks
+$asap: 'Asap', sans-serif;
 $helvetica: Helvetica, Arial, sans-serif;
 $helveticaNeue: "Helvetica Neue", Helvetica, Arial, sans-serif;
 $georgia: Georgia, serif;
