--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,7 +5,12 @@ layout: default
 <article class="post article-wrap">
   <h1>{{ page.title }}</h1>
   
-  
+  {% if page.categories contains 'Actus' %}
+    publié par <h3><strong>{{ post.author }}</strong></h3>
+  {% endif %}
+
+
+
   {% if page.categories contains 'Écrits' %}
     <aside id="fiche-main">
 
@@ -30,7 +35,18 @@ layout: default
 
   {% endif %}
 
+  {% if page.categories contains 'Événements' %}
+ <aside id="fiche-main">
+
+    <div class="fiche-intertitre">
+      <h2>Détails pratiques</h2>
+    </div>  
+
+  </aside>
+   {% endif %}
+
   <section id="fiche-resume">
+    <h2>Résumé / Sommaire</h2>
     {{ content }}
   </section>
 
