--- a/style.scss
+++ b/style.scss
@@ -1126,12 +1126,13 @@ Inlined to avoid required HTTP connection: h5bp.com/r */
   background-color: #B5FFE1;
 }
 
-.fiche-ecrits .fiche-intertitre h2{
+.fiche-intertitre h2{
   text-transform: uppercase;
   font-size: 1em;
   letter-spacing: 2px;
   line-height: 1.5em;
-  padding: 2px;
+  padding: 2px 0 2px 10px;
+  background-color : #E1E0EA;
 
 }
 
