--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,55 +5,103 @@ layout: default
 <article class="post article-wrap">
   <h1>{{ page.title }}</h1>
   
-  {% if page.categories contains 'Actus' %}
-    publié par <h3><strong>{{ post.author }}</strong></h3>
+  {% if page.categories contains 'actus' %}
+    <aside class="actus-details">
+      <span><span class="details">Publié le :</span><em> {{ page.date | date: "%e %B %Y" }}</em>  &#124;
+      <span class="details">Par </span><em>{{ page.author }}</em></span>
+    </aside>
   {% endif %}
-
-
 
   {% if page.categories contains 'Écrits' %}
-    <aside id="fiche-main">
+    <aside>
 
-    <div class="fiche-intertitre">
-      <h2>Informations Bibliographiques</h2>
-    </div>  
+      <div class="fiche-intertitre">
+        <h2>Informations Bibliographiques</h2>
+      </div>  
 
-    <p id="direction"><strong>Dirigé par :</strong> {{ page.director }}</p>
+      {% if page.written-director %}<p class="direction"><strong>Dirigé par :</strong> {{ page.written-director }}</p>{% endif %}
+      {% if page.written-writers %}<p class="author"><strong>Auteur(s) :</strong> {{ page.written-writers }}</p>{% endif %}
+      {% if page.written-publication %}<p class="dop"><strong>Date de publication :</strong> {{ page.written-publication }}</p>{% endif %}
+      {% if page.written-collection %}<p class="collection"><strong>Collection : </strong> {{ page.written-collection }}</p>{% endif %}
+      {% if page.written-number %}<p class="collection"><strong>Numéro : </strong> {{ page.written-number }}</p>{% endif %}
+      {% if page.written-editor %}<p class="editeur"><strong>Édité par : </strong>{{ page.written-editor }}</p> {% endif %}
+      {% if page.written-town %}<p class="ville"><strong>À :</strong> {{ page.written-town }}</p>{% endif %}
 
-    <p id="author"><strong>Auteur(s) :</strong> {{ page.writers }}</p>
-  
-    <p id="dop"><strong>Date de publication :</strong> {{ page.publication }}</p>
-
-    <p id="collection"><strong>Collection : </strong> {{ page.collection }}</p>
-
-    <p id="collection"><strong>Numéro : </strong> {{ page.number }}.</p>
-
-    <p id="editeur"><strong>Édité par : </strong>{{ page.editor }}</p> 
-
-    <p id="ville"><strong>À :</strong> {{ page.town }}</p>
-  </aside>
+    </aside>
 
   {% endif %}
 
-  {% if page.categories contains 'Événements' %}
- <aside id="fiche-main">
-
+  {% if page.categories contains 'médias' %}
+    <aside>
+  
     <div class="fiche-intertitre">
-      <h2>Détails pratiques</h2>
+      <h2>Fiche technique de la source</h2>
     </div>  
 
-  </aside>
-   {% endif %}
+    {% if page.media-url %}<p class="source"><strong>Source : </strong><a href="{{ page.media-url }}">Voir le site</a></p>{% endif %}
+    {% if page.media-date %}<p class="date"><strong>Date de création :</strong> {{ page.media-date }}</p>{% endif %}
+    {% if page.media-view %}<p class="nbre-vues"><strong>Nombres de vues : </strong> {{ page.media-view }}</p>{% endif %}
+    {% if page.media-rythm %}<p class="nb-publi"><strong>Rythme de publication :</strong> {{ page.media-rythm }}</p>{% endif %}
+
+    </aside>
+
+    <aside id="fiche-resume">
+    <div class="fiche-intertitre">
+      <h2>Architecture du blog</h2>
+      </div>
+    </aside>
+
+  {% endif %}
+
+
+  {% if page.categories contains 'Événements' %}
+    <div class="fiche-intertitre">
+      <h2>L'événement</h2>
+    </div>  
+    
+    {% if page.event-title %}<p class="titre-evenement"><strong>{{ page.event-title }}</strong></p>{% endif %}
+    {% if page.event-date %}<p class="date-limite"><strong>Date limite d'envoi des propositions :</strong> {{ page.event-date }}</p>{% endif %}
+    {% if page.event-information %}<p class="organisation"><strong>Organisation :</strong> {{ page.event-information }}</p>{% endif %}
+    
+    {% if page.event-contact %}
+      <aside>
+      
+      
+        <div class="fiche-intertitre">
+          <h2>Contacts</h2>
+        </div>
+        
+        <p>
+        {% for colloque in page.event-contact %}
+        <a href="mailto:{{ colloque.mail }}">{{ colloque.mail }}</a>
+        {% endfor %}
+        </p>
+
+      </aside>
+    {% endif %}
+  {% endif %}
 
   <section id="fiche-resume">
     <h2>Résumé / Sommaire</h2>
     {{ content }}
   </section>
+  
+  
+  {% if page.categories contains 'Écrits' or page.categories contains 'actus' or page.categories contains 'médias' %}
+  {% if page.tags != empty  %}
 
-
-  <div class="date">
-    Written on {{ page.date | date: "%B %e, %Y" }}
-  </div>
+    <aside id="fiche-tags">
+      <div class="fiche-intertitre">
+        <h2>Thèmes / Catégories liées : </h2>
+      </div>  
+      <p>
+        {% for tag in page.tags %}
+            <a class="codinfox-tag-mark" href="{{ site.baseurl }}/tag.html#{{ tag | slugify }}">{{ tag }}</a>
+        {% endfor %}
+      </p>
+    </aside>
+  {% endif %}
+  {% endif %}
 
   {% include disqus.html %}
 </article>
