configuration de prose.io

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -73,7 +73,7 @@ layout: default
         
         <p>
         {% for colloque in page.event-contact %}
-        <a href="mailto:{{ colloque.mail }}">{{ colloque.mail }}</a>
+        <a href="mailto:{{ colloque.mail }}">{{ colloque }}</a>
         {% endfor %}
         </p>
 
