--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -82,7 +82,7 @@ layout: default
   {% endif %}
 
   <section id="fiche-resume">
-    <h2>Résumé / Sommaire</h2>
+    <h2>Contenu</h2>
     {{ content }}
   </section>
   
