edit apparence tags + liens

--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -5,11 +5,16 @@
 
 // Colors
 $blue: #4183C4;
-$mintblue: #B5FFE1;
 $vertdeau: #78D89C;
 $rosecorail: #FF6D63;
 $rougestrong: #F22E47;
 $jaunedor: #FDCB32;
+
+// Light Colors
+$mintblue: #B5FFE1;
+$lightjaunedor: #FEE598;
+$lightrouge: #FCD5DA;
+$lightcorail : #FFA7A1;
 
 // Grays
 $black: #000;
