--- a/style.scss
+++ b/style.scss
@@ -82,7 +82,9 @@ a {
   cursor: pointer;
   &:hover,
   &:active {
-    color: $blue;
+    /*color: $blue;*/
+    color: $black;
+    text-decoration: underline;
   }
 }
 
@@ -1328,3 +1330,32 @@ header #decouverte a:hover {
 .actus-details .details a {
   color: $white;
 }
+
+/*----TAGS-----------------*/
+
+.block-tag{ 
+}
+
+.tag-style{
+  text-transform: uppercase;
+  font-size: 1em;
+  letter-spacing: 2px;
+  line-height: 1.5em;
+  padding: 2px 0 2px 10px;
+  background-color: $lightcorail;
+
+}
+
+.block-tag .tag-frame, .codinfox-tag-mark{
+  background-color: $mintblue;
+  padding: 3px;
+  border-radius: 5px;
+  font-size: 0.8em;
+}
+
+.block-tag .tag-frame:hover{
+  color: #000;
+  text-decoration: line-through; 
+}
+
+
