--- a/style.scss
+++ b/style.scss
@@ -1047,7 +1047,7 @@ p {
 }
 
 header {
-  padding: 10px;
+  padding: 10px 10px 30px 10px;
   margin-top: 30px;
 }
 
@@ -1056,29 +1056,33 @@ header .blurb {
   text-align: center;
 }
 
-header #decouverte {
-  display: block;
-  height: 54px;
-  margin: auto;
+#decouverte {
+  width: 100%;
+  height: 100px;
+  padding: 15px;
+  border-top: black solid 1px;
+  border-bottom: black solid 1px;
 }
 
-header #decouverte a {
+#decouverte a {
   text-transform: uppercase;
   text-align: center;
   letter-spacing: 5px;
   color: #000;
-  padding: 15px;
-  border-radius: 8px;
-  border: black solid 1px;
+  display: block;
+  border-radius: 25px;
+  padding : 15px;
+
+  
 }
 
-header #decouverte a:hover {
+#decouverte a:hover {
   text-decoration: none;
   background-color: rgb(255, 221, 217);
 }
 
 .themes {
-  width: 100%
+  width: 100%;
 }
 
 .themes ul {
@@ -1125,6 +1129,15 @@ header #decouverte a:hover {
     text-transform: capitalize;
   }
 }
+
+.titre-categorie h4{
+    font-family: $asap;
+    font-weight: 600;
+    letter-spacing: 4px;
+
+}
+
+
 
 .actus-link,
 .actus-box .titre-categorie {
@@ -1174,6 +1187,7 @@ header #decouverte a:hover {
   margin-top: 0;
   padding-top: 1rem;
   padding-bottom: 30px;
+  background-color: $lightGray;
   /*ajout Pia*/
 }
 
@@ -1188,6 +1202,7 @@ header #decouverte a:hover {
 .evenements-box,
 .medias-box {
   text-align: center;
+  background-color: $white;
 }
 
 .actus-box .author {
@@ -1305,7 +1320,7 @@ header #decouverte a:hover {
   background-color: #B5FFE1;
 }
 
-.fiche-intertitre h2 {
+.fiche-intertitre h2{
   text-transform: uppercase;
   font-size: 1em;
   letter-spacing: 2px;
@@ -1316,6 +1331,13 @@ header #decouverte a:hover {
 
 .footer {
   border-top: solid 1px black;
+  background-color: $darkGray;
+}
+
+.footer h6{
+  font-weight: 400;
+  color: $white;
+  letter-spacing: 4px;
 }
 
 .actus-details {
