reglages details logo

--- a/style.scss
+++ b/style.scss
@@ -1193,8 +1193,9 @@ header .blurb {
 
 .article-wrap {
   margin: 0 auto;
-  padding: 0 0.5rem;
+  padding: 2em 0.5rem;
   max-width: 45rem;
+  background-color: $white;
 }
 
 .actus-box,
