--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,7 +21,7 @@
 <body>
   <div id="wrapper">
     <header>
-      <a href="{{ site.baseurl }}/"><img src="/images/logo.png" width="400" class="logo" /></a>
+      <a href="{{ site.baseurl }}/"><img src="/images/logo.svg" width="400" class="logo" /></a>
       <div class="blurb">
         <p>Pourquoi écrire et publier sur le web ce que l’on pense d’un film ou d’une série ? Quel site choisir pour ce faire ? Comment s’y prennent les critiques amateurs ? Quels blogs, quels forums, quelles pages sont-ils les plus visités en France ? Y a-t-il une façon propre au web d’écrire des critiques ? Quelles différences séparent ces textes de ceux des professionnels de la presse écrite ? Autant de questions dans l’attente d’une étude académique systématique de leurs réponses possibles. Venez découvrir sur cette page les enjeux du projets Cinéphilies / Sériphilies.</p>
       </div>
