--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -39,7 +39,7 @@ layout: default
     </div>  
 
     {% if page.media-url %}<p class="source"><strong>Source : </strong><a href="{{ page.media-url }}">{{ page.media-name }}</a></p>{% endif %}
-    {% if page.media-date %}<p class="date"><strong>Date de création :</strong> {{ page.media-date }}</p>{% endif %}
+    {% if page.media-date %}<p class="date-source"><strong>Date de création :</strong> {{ page.media-date }}</p>{% endif %}
     {% if page.media-view %}<p class="nbre-vues"><strong>Nombres de vues : </strong> {{ page.media-view }}</p>{% endif %}
     {% if page.media-rythm %}<p class="nb-publi"><strong>Rythme de publication :</strong> {{ page.media-rythm }}</p>{% endif %}
 
