--- a/style.scss
+++ b/style.scss
@@ -1058,10 +1058,10 @@ header .blurb {
 
 #decouverte {
   width: 100%;
-  height: 100px;
   padding: 15px;
   border-top: black solid 1px;
   border-bottom: black solid 1px;
+  background-color: $darkGray;
 }
 
 #decouverte a {
@@ -1072,13 +1072,14 @@ header .blurb {
   display: block;
   border-radius: 25px;
   padding : 15px;
-
+  color: $white;
   
 }
 
 #decouverte a:hover {
   text-decoration: none;
-  background-color: rgb(255, 221, 217);
+  background-color: $lightGray;
+  color: $black;
 }
 
 .themes {
@@ -1193,7 +1194,7 @@ header .blurb {
 
 .article-wrap {
   margin: 0 auto;
-  padding: 2em 0.5rem;
+  padding: 2em;
   max-width: 45rem;
   background-color: $white;
 }
@@ -1290,6 +1291,13 @@ header .blurb {
     display: block;
     width: 50%;
   }
+
+  .article-wrap {
+  margin: 0 auto;
+  padding: 0.8em;
+ } 
+
+
 }
 
 @media (max-width: 850px) {
