--- a/style.scss
+++ b/style.scss
@@ -1047,40 +1047,56 @@ p {
 }
 
 header {
-  padding: 10px 10px 30px 10px;
-  margin-top: 30px;
+  overflow: hidden;
+  padding: 0.5rem 0.5rem 1.5rem;
+}
+
+header > a {
+  display: inline-block;
+  width: 29%;
+  vertical-align: top;
+}
+
+header img {
+  width: 100%;
+  max-height: 150px;
 }
 
 header .blurb {
+  display: inline-block;
   padding: 0 20px;
+  width: 70%;
   text-align: center;
+  vertical-align: middle;
 }
 
 #decouverte {
-  width: 100%;
   padding: 15px;
+  width: 100%;
   border-top: black solid 1px;
   border-bottom: black solid 1px;
   background-color: $darkGray;
 }
 
 #decouverte a {
-  text-transform: uppercase;
+  display: block;
+  margin: 0 auto;
+  padding: 15px;
+  max-width: 60em;
   text-align: center;
   letter-spacing: 5px;
-  color: #000;
-  display: block;
-  border-radius: 25px;
-  padding : 15px;
+  text-transform: uppercase;
   color: $white;
-  
+  border-radius: 25px;
+  transition: 0.1s ease;
 }
 
 #decouverte a:hover {
   text-decoration: none;
-  background-color: $lightGray;
   color: $black;
+  background-color: $lightGray;
 }
+
 
 .themes {
   width: 100%;
@@ -1108,7 +1124,7 @@ header .blurb {
   letter-spacing: 5px;
   border: solid 1px #fff;
   margin: 0;
-  padding: 5px 30px;
+  padding: 5px;
   display: block;
   color: #000;
 }
@@ -1207,10 +1223,6 @@ header .blurb {
   background-color: $white;
 }
 
-.actus-box .author {
-  font-size: 0.8em;
-}
-
 .actus-box .h4 {
   margin-bottom: 0px;
 }
@@ -1223,6 +1235,9 @@ header .blurb {
   border-left: black solid 1px;
   border-right: black solid 1px;
   border-bottom: black solid 1px;
+  .author {
+    font-size: 0.8em;
+  }
 }
 
 [class$='-box'] {
@@ -1301,7 +1316,8 @@ header .blurb {
 }
 
 @media (max-width: 850px) {
-  header img {
+  header > a,
+  header .blurb {
     width: 100%;
   }
 }
