--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -57,6 +57,8 @@
   </div>
 
   {% include analytics.html %}
+  <script src="{{ site.baseurl }}/javascripts/instantclick.min.js" data-no-instant></script>
+  <script data-no-instant>InstantClick.init();</script>
 </body>
 
 </html>
