--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -40,8 +40,8 @@
     </nav>
     <div class="clearfloat"></div>
     <nav id="social">
-      <a href=""><img src="images/twitter.png" alt="Twitter - Cinéphilies / Sériphilies" class="icon-social" /></a>
-      <a href=""><img src="images/facebook.png" alt="Facebook - Cinéphilies / Sériphilies" class="icon-social" /></a>
+      <a href="#"><img src="images/twitter.png" alt="Twitter - Cinéphilies / Sériphilies" class="icon-social" /></a>
+      <a href="#"><img src="images/facebook.png" alt="Facebook - Cinéphilies / Sériphilies" class="icon-social" /></a>
     </nav>
     <div class="clearfloat"></div>
     <div id="content">
@@ -57,8 +57,16 @@
   </div>
 
   {% include analytics.html %}
+  <script src="{{ site.baseurl }}/javascripts/upup.sw.min.js"></script>
   <script src="{{ site.baseurl }}/javascripts/instantclick.min.js" data-no-instant></script>
-  <script data-no-instant>InstantClick.init();</script>
+  <script data-no-instant>
+    InstantClick.init();
+    UpUp.start({
+          'content-url': '{{ page.url | replace:'/','' }}',
+          'assets':
+            ['{{ site.baseurl }}/style.css', '/images/logo.svg']
+        });
+  </script>
 </body>
 
 </html>
