--- a/style.scss
+++ b/style.scss
@@ -1393,7 +1393,7 @@ header .blurb {
 
 }
 
-.block-tag .tag-frame, .codinfox-tag-mark{
+.block-tag .tag-frame, .codinfox-tag-mark, .tag-frame{
   background-color: $mintblue;
   padding: 3px;
   border-radius: 5px;
