--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -40,8 +40,8 @@
     </nav>
     <div class="clearfloat"></div>
     <nav id="social">
-      <a href="#"><img src="images/twitter.png" alt="Twitter - Cinéphilies / Sériphilies" class="icon-social" /></a>
-      <a href="#"><img src="images/facebook.png" alt="Facebook - Cinéphilies / Sériphilies" class="icon-social" /></a>
+      <a href="#"><img src="/images/twitter.png" alt="Twitter - Cinéphilies / Sériphilies" class="icon-social" /></a>
+      <a href="#"><img src="/images/facebook.png" alt="Facebook - Cinéphilies / Sériphilies" class="icon-social" /></a>
     </nav>
     <div class="clearfloat"></div>
     <div id="content">
