--- a/style.scss
+++ b/style.scss
@@ -5,6 +5,7 @@
 // IMPORTS
 //
 @import "reset";
+@import "normalize-opentype";
 @import "variables";
 // Syntax highlighting @import is at the bottom of this file
 
@@ -359,6 +360,10 @@ h6,
   padding: 0;
   font-size: 100%;
   font-weight: normal;
+  small {
+    font-size: 60%;
+    line-height: 0;
+  }
 }
 
 h1,
@@ -402,21 +407,6 @@ h6,
   font-weight: bold;
 }
 
-h1 small,
-.h1 small,
-h2 small,
-.h2 small,
-h3 small,
-.h3 small,
-h4 small,
-.h4 small,
-h5 small,
-.h5 small,
-h6 small,
-.h6 small {
-  font-size: 60%;
-  line-height: 0;
-}
 
 hr {
   -moz-box-sizing: content-box;
@@ -1306,13 +1296,10 @@ header .blurb {
     display: block;
     width: 50%;
   }
-
   .article-wrap {
-  margin: 0 auto;
-  padding: 0.8em;
- } 
-
-
+    margin: 0 auto;
+    padding: 0.8em;
+  } 
 }
 
 @media (max-width: 850px) {
@@ -1335,24 +1322,25 @@ header .blurb {
 }
 
 .post figure {
-  border-bottom: 1px solid black;
   margin-bottom: 10px;
   padding-bottom: 1em;
   text-align: center;
+  border-bottom: 1px solid black;
 }
 
 .fiche-ecrits .fiche-intertitre {
   background-color: #B5FFE1;
 }
 
-.fiche-intertitre h2{
-  text-transform: uppercase;
+.fiche-intertitre h2 {
+  padding: 2px 0 2px 10px;
+  line-height: 1.5em;
   font-size: 1em;
   letter-spacing: 2px;
-  line-height: 1.5em;
-  padding: 2px 0 2px 10px;
-  background-color: #E1E0EA;
+  text-transform: uppercase;
+  background-color: #e1e0ea;
 }
+
 
 .footer {
   border-top: solid 1px black;
@@ -1366,13 +1354,14 @@ header .blurb {
 }
 
 .actus-details {
-  font-family: $asap;
   display: block;
-  background-color: #60AD7D;
-  color: $white;
   margin-bottom: 10px;
   padding: 5px 0 5px 10px;
+  font-family: $asap;
+  color: $white;
+  background-color: #60ad7d;
 }
+
 
 .actus-details .details a {
   color: $white;
@@ -1380,25 +1369,25 @@ header .blurb {
 
 /*----TAGS-----------------*/
 
-.block-tag{ 
-}
-
-.tag-style{
-  text-transform: uppercase;
+.tag-style {
+  padding: 2px 0 2px 10px;
+  line-height: 1.5em;
   font-size: 1em;
   letter-spacing: 2px;
-  line-height: 1.5em;
-  padding: 2px 0 2px 10px;
+  text-transform: uppercase;
   background-color: $lightcorail;
-
 }
 
-.block-tag .tag-frame, .codinfox-tag-mark, .tag-frame{
-  background-color: $mintblue;
+
+.block-tag .tag-frame,
+.codinfox-tag-mark,
+.tag-frame {
   padding: 3px;
-  border-radius: 5px;
   font-size: 0.8em;
+  border-radius: 5px;
+  background-color: $mintblue;
 }
+
 
 .block-tag .tag-frame:hover{
   color: #000;
