--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -40,6 +40,7 @@
     </nav>
     <div class="clearfloat"></div>
     <nav id="social">
+       <a href="mailto:cinephilies2.0@gmail.com"><img src="/images/mail.png" alt="Mail - Cinéphilies / Sériphilies" class="icon-social" /></a>
       <a href="#"><img src="/images/twitter.png" alt="Twitter - Cinéphilies / Sériphilies" class="icon-social" /></a>
       <a href="#"><img src="/images/facebook.png" alt="Facebook - Cinéphilies / Sériphilies" class="icon-social" /></a>
     </nav>
