--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -51,8 +51,7 @@
     </div>
     <!--close content-->
     <footer class="footer">
-      <h6>Copyright Labex © 2015</h6>
-
+      <p>Copyright Labex © 2015</p>
     </footer>
   </div>
 
