--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -4,17 +4,17 @@
 //
 
 // Colors
-$blue: #4183C4;
-$vertdeau: #78D89C;
-$rosecorail: #FF6D63;
-$rougestrong: #F22E47;
-$jaunedor: #FDCB32;
+$blue: #4183c4;
+$vertdeau: #78d89c;
+$rosecorail: #ff6d63;
+$rougestrong: #f22e47;
+$jaunedor: #fdcb32;
 
 // Light Colors
-$mintblue: #B5FFE1;
-$lightjaunedor: #FEE598;
-$lightrouge: #FCD5DA;
-$lightcorail : #FFA7A1;
+$mintblue: #b5ffe1;
+$lightjaunedor: #fee598;
+$lightrouge: #fcd5da;
+$lightcorail: #ffa7a1;
 
 // Grays
 $black: #000;
