liens réseaux sociaux

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -40,8 +40,8 @@
     <div class="clearfloat"></div>
     <nav id="social">
        <a href="mailto:cinephilies2.0@gmail.com"><img src="/images/mail.png" alt="Mail - Cinéphilies / Sériphilies" class="icon-social" /></a>
-      <a href="#"><img src="/images/twitter.png" alt="Twitter - Cinéphilies / Sériphilies" class="icon-social" /></a>
-      <a href="#"><img src="/images/facebook.png" alt="Facebook - Cinéphilies / Sériphilies" class="icon-social" /></a>
+      <a href="https://twitter.com/cinephilies2_0"><img src="/images/twitter.png" alt="Twitter - Cinéphilies / Sériphilies" class="icon-social" /></a>
+      <a href="https://www.facebook.com/profile.php?id=100009303073072&fref=ts"><img src="/images/facebook.png" alt="Facebook - Cinéphilies / Sériphilies" class="icon-social" /></a>
     </nav>
     <div class="clearfloat"></div>
     <div id="content">
